--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 Changes
 =======
 
+29.0 (2021-02-22)
+-----------------
+
+* Support cmarkgfm>=0.5.0 (#180)
+* Drop support for Python 2 and 3.5 (#188)
+
 28.0 (2020-10-20)
 -----------------
 
